# case-insensitive-string

./: .gitignore  .pre-commit-config.yaml  README.md  ccis.c  cis.py  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
case_insensitive_string/: ccis.c  ccis.pyx  cis.c  cis.py
tests/: cis_test.py
